--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="loading-message" id="loadingMessage" style="display: none;">Loading...</div>
       <div class="input-group">
         <input type="text" id="cityInput" placeholder="Enter city name">
-        <button type="button" onclick="fetchWeather()">Submit</button>
+        <button type="button" onclick="fetchWeather()"><img src="/Vector.png"></button>
       </div>
       <div class="separator">
         <div class="line"></div>
