--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
   <link rel="stylesheet" href="style.css">
-  <script src="myScripts.js" defer></script>
+  <script src="script.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -17,7 +17,7 @@
       <div class="loading-message" id="loadingMessage" style="display: none;">Loading...</div>
       <div class="input-group">
         <input type="text" id="cityInput" placeholder="Enter city name">
-        <button type="button" onclick="fetchWeather()"><img src="/Vector.png"></button>
+        <button type="button" onclick="fetchWeather()"><img src="/Vector.png" alt="Search"></button>
       </div>
       <div class="separator">
         <div class="line"></div>
@@ -28,7 +28,7 @@
     </div>
   </div> 
   <div class="footer">
-    <img src="Group.png" alt="Footer Image">
+    <img src="/Group.png" alt="Footer Image">
   </div>
 </body>
 </html>
