--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div> 
   <div class="footer">
-    <img src="/Group.png" alt="Footer Image">
+    <img src="Group.png" alt="Footer Image">
   </div>
 </body>
 </html>
