--- a/weather.html
+++ b/weather.html
@@ -13,15 +13,15 @@
 <body onload="populateWeatherInfo()">
   <div class="container">
     <div class="web-title">
-      <img src="/leftarrow.png" alt="Back Arrow">
+      <img src="leftarrow.png" alt="Back Arrow">
       Weather App
     </div>
     <div class="location">
-      <img src="/location.png" alt="Location Icon"> 
+      <img src="location.png" alt="Location Icon"> 
       <span id="locationName">Lagos</span>
     </div>
     <div class="weather-logo">
-      <img src="/cloud.png" alt="Weather Icon" id="weatherIcon">
+      <img src="cloud.png" alt="Weather Icon" id="weatherIcon">
     </div>
     <div class="weather-info">
       <h4 id="weatherDescription">Shower Rain</h4>
@@ -31,20 +31,20 @@
     </div>
     <div class="container-footer">
       <div class="feel-temperature">
-        <img src="/temp.png" alt="Feels Like Temperature">
+        <img src="temp.png" alt="Feels Like Temperature">
         <div class="temp-value" id="feelsLike">23°C</div>
         <div class="temp-label">Feels like</div>
       </div>
       <div class="separator"></div>
       <div class="humidity">
-        <img src="/humidity.png" alt="Humidity">
+        <img src="humidity.png" alt="Humidity">
         <div class="humidity-value" id="humidity">93%</div>
         <div class="humidity-label">Humidity</div>
       </div>
     </div>
   </div>
   <div class="footer">
-    <img src="/nightsky.png" alt="Footer Image">
+    <img src="nightsky.png" alt="Footer Image">
   </div>
 </body>
 </html>
