--- a/weather.html
+++ b/weather.html
@@ -10,18 +10,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
-<body onload="populateWeatherInfo()">
+<body onload="weatherInfo()">
   <div class="container">
     <div class="web-title">
-      <img src="leftarrow.png" alt="Back Arrow">
+      <img src="leftarrow.png">
       Weather App
     </div>
     <div class="location">
-      <img src="location.png" alt="Location Icon"> 
+      <img src="location.png"> 
       <span id="locationName">Lagos</span>
     </div>
     <div class="weather-logo">
-      <img src="cloud.png" alt="Weather Icon" id="weatherIcon">
+      <img src="cloud.png" id="weatherIcon">
     </div>
     <div class="weather-info">
       <h4 id="weatherDescription">Shower Rain</h4>
@@ -31,20 +31,20 @@
     </div>
     <div class="container-footer">
       <div class="feel-temperature">
-        <img src="temp.png" alt="Feels Like Temperature">
+        <img src="temp.png">
         <div class="temp-value" id="feelsLike">23°C</div>
         <div class="temp-label">Feels like</div>
       </div>
       <div class="separator"></div>
       <div class="humidity">
-        <img src="humidity.png" alt="Humidity">
+        <img src="humidity.png">
         <div class="humidity-value" id="humidity">93%</div>
         <div class="humidity-label">Humidity</div>
       </div>
     </div>
   </div>
   <div class="footer">
-    <img src="nightsky.png" alt="Footer Image">
+    <img src="nightsky.png">
   </div>
 </body>
 </html>
