--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <div class="container">
     <div class="web-title">Weather App</div>
     <div class="input">
-      <div class="loading-message" id="loadingMessage" style="display: none;">Loading...</div>
+      <div class="loading-message" id="loadingMessage">Loading...</div>
+      <div class="error-message" id="errorMessage">Error fetching data</div>
       <div class="input-group">
         <input type="text" id="cityInput" placeholder="Enter city name">
-        <button type="button" onclick="fetchWeather()"><img src="Vector.png" alt="Search"></button>
+        <button type="button" id="myButton" onclick="fetchWeather()"><img src="Vector.png"></button>
       </div>
       <div class="separator">
         <div class="line"></div>
@@ -28,7 +29,7 @@
     </div>
   </div> 
   <div class="footer">
-    <img src="Group.png" alt="Footer Image">
+    <img src="Group.png">
   </div>
 </body>
 </html>
