--- a/weather.html
+++ b/weather.html
@@ -13,7 +13,7 @@
 <body onload="weatherInfo()">
   <div class="container">
     <div class="web-title">
-      <img src="leftarrow.png">
+      <button type="button" class="backButton" id="back-button" onclick="goHome()"><img src="leftarrow.png"></button> 
       Weather App
     </div>
     <div class="location">
